// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-css-modules build should create valid app 1`] = `
SCRIPTS: Array [
  "/static/typescript/runtime-9729bb82c0a343375b97.js",
  "/static/typescript/702-ef15ca26d5c62a3fad08.js",
  "/static/typescript/main-482193a1b0b0941a3ab9.js",
]
CSS: Array [
  "/static/typescript/main-21ba36bf1c8257f9aa56.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lE4bKpu">
        <div class="_KPLLp3"
             data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>

`;

exports[`typescript-css-modules build should generate the expected files 1`] = `
Object {
  "702-ef15ca26d5c62a3fad08.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "components/BlueBlock/BlueBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "components/RedBlock/RedBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "index.html": SCRIPTS: Array [
    "/static/typescript/runtime-9729bb82c0a343375b97.js",
    "/static/typescript/702-ef15ca26d5c62a3fad08.js",
    "/static/typescript/main-482193a1b0b0941a3ab9.js",
  ]
CSS: Array [
    "/static/typescript/main-21ba36bf1c8257f9aa56.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lE4bKpu">
        <div class="_KPLLp3"
             data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>,
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
export const cssExports: CssExports;
export default cssExports;
",
  "main-21ba36bf1c8257f9aa56.css": .lE4bKpu {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.lE4bKpu ._KPLLp3 {
  font-size: 32px;
}
,
  "main-482193a1b0b0941a3ab9.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-9729bb82c0a343375b97.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules build-ssr should create valid app 1`] = `
SCRIPTS: Array [
  "http://localhost:4003/runtime-9729bb82c0a343375b97.js",
  "http://localhost:4003/554-1353d7284334551eb8df.js",
  "http://localhost:4003/main-bcba825560f08e1613a1.js",
]
CSS: Array [
  "http://localhost:4003/main-21ba36bf1c8257f9aa56.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="lE4bKpu">
        <div class="_KPLLp3"
             data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
            crossorigin="anonymous"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>

`;

exports[`typescript-css-modules build-ssr should generate the expected files 1`] = `
Object {
  "554-1353d7284334551eb8df.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "components/BlueBlock/BlueBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "components/RedBlock/RedBlock.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const border: string;
export const root: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  'nested': string;
  'root': string;
}
export const cssExports: CssExports;
export default cssExports;
",
  "main-21ba36bf1c8257f9aa56.css": .lE4bKpu {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.lE4bKpu ._KPLLp3 {
  font-size: 32px;
}
,
  "main-bcba825560f08e1613a1.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-9729bb82c0a343375b97.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules start should start a development server 1`] = `
SCRIPTS: Array [
  "/runtime.js",
  "/vendors-node_modules_loadable_component_dist_loadable_esm_js-node_modules_pmmmwh_react-refres-22d334.js",
  "/main.js",
]
CSS: Array [
  "/main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lessStyles__root___lE4bKpu">
        <div class="lessStyles__nested____KPLLp3"
             data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS___ext"
            type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script async
            data-chunk="main"
            src="scripts[0]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>

`;
